<resources>
    <string name="app_name">ToDo</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login">登录</string>
    <string name="welcome">加入任务清单管理</string>
    <string name="user_name">用户名</string>
    <string name="password">密码</string>
    <string name="agreement">用户协议</string>
    <string name="remember_password">记住密码</string>
    <string name="register_now">没有账号?立即注册</string>
    <string name="register">注册</string>
    <string name="account_format">账号格式为2-8位字母或数字</string>
    <string name="password_format">密码格式为6-12位字母或数字</string>
    <string name="verify_password">请再次输入密码</string>
</resources>